--- a/node/proxy-config.json
+++ b/node/proxy-config.json
@@ -26,5 +26,13 @@
     "gateway_certificate_is_valid": {
         "value": "true",
         "description": "Flag indicating the configured SSL certificate in the API gateway is a valid. This setting is active only if 'gateway_has_certificate' is true. This must be set to 'false' if API gateway is configured with a self signed certificate "
+    },
+    "HPKP_token": {
+        "value": "",
+        "description": "Add pin-sha256(Base64 encoded Subject Public Key Information (SPKI) fingerprint) value for set HTTP Public Key Pinning"
+    },
+    "embed_iFrame": {
+        "value": "false",
+        "description": "Enable or disable X-FRAME-OPTIONS in http header to block iframe"
     }
 }
